fix image loading, add captions and alignment

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,18 +10,15 @@
 	@keyframes fade-in {
 		from {
 			opacity: 0;
-			transform: scale(0.95);
 		}
 		to {
 			opacity: 1;
-			transform: scale(1);
 		}
 	}
 }
 
 .prose {
-	@apply text-stone-300;
-	@apply text-xl;
+	@apply text-xl text-stone-300;
 	line-height: 1.8;
 
 	> :where(*:not([class*='mb-']):not([class*='mt-'])),
@@ -99,9 +96,7 @@
 	}
 
 	figcaption {
-		@apply text-stone-400;
-		@apply text-lg;
-		font-style: italic;
+		@apply mt-2 text-center text-sm text-slate-400 italic;
 	}
 
 	> :first-child {
